[gd_scene load_steps=5 format=3 uid="uid://c42ea5q0o5mkk"]

[ext_resource type="Script" path="res://Pipes/pipes.gd" id="1_apkro"]
[ext_resource type="PackedScene" uid="uid://dfq0hnbqah81v" path="res://Laser/laser.tscn" id="1_mf6ep"]
[ext_resource type="PackedScene" uid="uid://c5lp8q87b72td" path="res://Pipe/pipe.tscn" id="2_winep"]
[ext_resource type="AudioStream" uid="uid://kaq2g3uhhx78" path="res://assets/audio/score.wav" id="4_bb4i3"]

[node name="Pipes" type="Node2D"]
script = ExtResource("1_apkro")

[node name="Laser" parent="." instance=ExtResource("1_mf6ep")]
position = Vector2(0, 11)

[node name="LaserMonitoringTimer" type="Timer" parent="Laser"]
wait_time = 0.3

[node name="Lower" parent="." instance=ExtResource("2_winep")]
position = Vector2(0, 80)

[node name="Upper" parent="." instance=ExtResource("2_winep")]
position = Vector2(-1, -80)
rotation = 3.14159

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(90, -2)

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_bb4i3")

[connection signal="body_entered" from="Laser" to="." method="_on_laser_body_entered"]
[connection signal="timeout" from="Laser/LaserMonitoringTimer" to="." method="_on_laser_monitoring_timer_timeout"]
[connection signal="body_entered" from="Lower" to="." method="_on_pipe_body_entered"]
[connection signal="body_entered" from="Upper" to="." method="_on_pipe_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
